crates/keron-lang/tests/corpus/errors/check/fn_return_type_mismatch.keron
fn f(): Int {
  "not an int"
}
